set(TEST_FLAGS "-I${PROJECT_SOURCE_DIR} -I${PROJECT_SOURCE_DIR}/tests")

add_executable(zz1 zz1.c)
target_link_libraries(zz1 zzdicom)
set_target_properties(zz1 PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
add_test(zz1 ${CMAKE_CURRENT_BINARY_DIR}/zz1)

add_executable(zzw zzw.c)
target_link_libraries(zzw zzdicom)
set_target_properties(zzw PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
add_test(zzw ${CMAKE_CURRENT_BINARY_DIR}/zzw "Basics")

add_executable(zzwcopy zzwcopy.c ../part6.c)
target_link_libraries(zzwcopy zzdicom)
set_target_properties(zzwcopy PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zznettest testnet.c ../zznet.c ../zznetwork.c)
target_link_libraries(zznettest zzdicom pthread)
set_target_properties(zznettest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zziotest zziotest.c)
target_link_libraries(zziotest zzdicom)
set_target_properties(zziotest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
add_test(zziotest ${CMAKE_CURRENT_BINARY_DIR}/zziotest "samples/tw2.dcm" "${CMAKE_SOURCE_DIR}/samples/spine.dcm")

add_test(zzread ${CMAKE_BINARY_DIR}/zzread "${CMAKE_SOURCE_DIR}/samples/spine.dcm")

add_executable(sqltest sqltest.c)
target_link_libraries(sqltest zzdicom sqlite3)
set_target_properties(sqltest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
add_test(zzsqltest ${CMAKE_CURRENT_BINARY_DIR}/sqltest)

if(APPLE)
  # fixme - trouble with charls
elseif(DEFINED ENV{TEST_GL})
  add_executable(zzt zzt.c)
  target_link_libraries(zzt zzdicom ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} CharLS)
  set_target_properties(zzt PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
  add_test(zzt ${CMAKE_CURRENT_BINARY_DIR}/zzt "${CMAKE_SOURCE_DIR}/samples/spine.dcm")
  add_test(zzt-ls ${CMAKE_CURRENT_BINARY_DIR}/zzt "${CMAKE_SOURCE_DIR}/samples/spine-ls.dcm")
endif(APPLE)

add_test(dump-version ${CMAKE_BINARY_DIR}/zzdump "--version")
add_test(dump-help ${CMAKE_BINARY_DIR}/zzdump "--help")
add_test(dump-usage ${CMAKE_BINARY_DIR}/zzdump "--usage")
add_test(dump-confuse ${CMAKE_BINARY_DIR}/zzdump "-v" "samples/confuse.dcm")
add_test(dump-tw1 ${CMAKE_BINARY_DIR}/zzdump "--" "samples/tw1.dcm")
add_test(dump-tw2 ${CMAKE_BINARY_DIR}/zzdump "samples/tw2.dcm")
add_test(dump-broken ${CMAKE_BINARY_DIR}/zzdump "samples/brokensq.dcm")
add_test(dump-spine ${CMAKE_BINARY_DIR}/zzdump "${CMAKE_SOURCE_DIR}/samples/spine.dcm")
add_test(dump-spine-ls ${CMAKE_BINARY_DIR}/zzdump "${CMAKE_SOURCE_DIR}/samples/spine-ls.dcm")
add_test(anon-tw1 ${CMAKE_BINARY_DIR}/zzanon "ANON" "samples/tw1.dcm")
add_test(anon-tw2 ${CMAKE_BINARY_DIR}/zzanon "ANON_LONG_NAME" "samples/tw2.dcm")
add_test(make-random1 ${CMAKE_BINARY_DIR}/zzmkrandom "--seed 5466" "samples/random.dcm")
add_test(zzwcopy ${CMAKE_CURRENT_BINARY_DIR}/zzwcopy "${CMAKE_SOURCE_DIR}/samples/zzwcopy.dcm" "${CMAKE_SOURCE_DIR}/samples/random.dcm")
add_test(NAME zznettest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zznettest WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
