set(TEST_FLAGS "-I${PROJECT_SOURCE_DIR} -I${PROJECT_SOURCE_DIR}/tests")

add_executable(zz1 zz1.c)
target_link_libraries(zz1 zzdicom)
set_target_properties(zz1 PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zzw zzw.c)
target_link_libraries(zzw zzdicom)
set_target_properties(zzw PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zzwcopy zzwcopy.c ../part6.c)
target_link_libraries(zzwcopy zzdicom)
set_target_properties(zzwcopy PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zznettest testnet.c ../zznet.c ../zznetwork.c)
target_link_libraries(zznettest zzdicom pthread)
set_target_properties(zznettest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(zziotest zziotest.c)
target_link_libraries(zziotest zzdicom)
set_target_properties(zziotest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

add_executable(sqltest sqltest.c)
target_link_libraries(sqltest zzdicom sqlite3)
set_target_properties(sqltest PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")

if(APPLE)
  # fixme - trouble with charls
elseif(DEFINED ENV{TEST_GL})
  add_executable(zzt zzt.c)
  target_link_libraries(zzt zzdicom ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} CharLS)
  set_target_properties(zzt PROPERTIES COMPILE_FLAGS "${TEST_FLAGS}")
  add_test(NAME zzt COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zzt "samples/spine.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
  add_test(NAME zzt-ls COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zzt "samples/spine-ls.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif(APPLE)

add_test(NAME zz1 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zz1 WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzw COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zzw WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zziotest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zziotest "samples/tw2.dcm" "samples/spine.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzread COMMAND ${CMAKE_BINARY_DIR}/zzread "samples/spine.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzsqltest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/sqltest WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-version COMMAND ${CMAKE_BINARY_DIR}/zzdump "--version" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-help COMMAND ${CMAKE_BINARY_DIR}/zzdump "--help" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-usage COMMAND ${CMAKE_BINARY_DIR}/zzdump "--usage" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-confuse COMMAND ${CMAKE_BINARY_DIR}/zzdump "-v" "samples/confuse.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-tw1 COMMAND ${CMAKE_BINARY_DIR}/zzdump "--" "samples/tw1.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-tw2 COMMAND ${CMAKE_BINARY_DIR}/zzdump "samples/tw2.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-broken COMMAND ${CMAKE_BINARY_DIR}/zzdump "samples/brokensq.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-spine COMMAND ${CMAKE_BINARY_DIR}/zzdump "samples/spine.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME dump-spine-ls COMMAND ${CMAKE_BINARY_DIR}/zzdump "samples/spine-ls.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME anon-tw1 COMMAND ${CMAKE_BINARY_DIR}/zzanon "ANON" "samples/tw1.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME anon-tw2 COMMAND ${CMAKE_BINARY_DIR}/zzanon "ANON_LONG_NAME" "samples/tw2.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME make-random1 COMMAND ${CMAKE_BINARY_DIR}/zzmkrandom "--seed" "5466" "samples/random.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzwcopytest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zzwcopy "samples/zzwcopy.dcm" "samples/random.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzcopy1 COMMAND ${CMAKE_BINARY_DIR}/zzcopy "samples/spine.dcm" "samples/zzcopy1.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzcopy2 COMMAND ${CMAKE_BINARY_DIR}/zzcopy "--rgb" "samples/spine.dcm" "samples/zzcopy2.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzcopy3 COMMAND ${CMAKE_BINARY_DIR}/zzcopy "--jpegls" "samples/spine.dcm" "samples/zzcopy3.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zznettest COMMAND ${CMAKE_CURRENT_BINARY_DIR}/zznettest WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
add_test(NAME zzpixel COMMAND ${CMAKE_BINARY_DIR}/zzpixel "--zero" "200" "200" "300" "300" "samples/zzcopy1.dcm" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
